# alf_nes_tools

./: .gitignore  6502_pseudo_docs.txt  CMakeLists.txt  Makefile  auto.py  coso.py  coso2.py  run.bat  run.sh
src/: main.c
src/c_libs/: AlfNes.c  AlfNes.h  alu.c  alu.h  charOps.c  charOps.h  chr.c  chr.h  common.c  common.h  cpu.c  cpu.h  instCallback.c  instCallback.h  instructions.c  instructions.h  mappers.c  mappers.h  ppu.c  ppu.h  ram.c  ram.h  rmw.c  rmw.h  romParser.c  romParser.h  saveGame.c  saveGame.h
